--- a/app/globals.css
+++ b/app/globals.css
@@ -11,21 +11,24 @@
     text-rendering: optimizeLegibility;
   }
   
-  /* Make all text darker and bolder by default, but not in footer or buttons */
-  p:not(footer p):not(button p):not(button *), 
-  span:not(footer span):not(button span):not(button *), 
-  div:not(footer div):not(button div):not(button *), 
-  a:not(footer a):not(button a):not(button *), 
-  li:not(footer li):not(button li):not(button *), 
-  td:not(footer td):not(button td):not(button *), 
-  th:not(footer th):not(button th):not(button *) {
+  /* Make all text darker and bolder by default, but not in footer */
+  p:not(footer p), 
+  span:not(footer span), 
+  div:not(footer div), 
+  a:not(footer a), 
+  li:not(footer li), 
+  td:not(footer td), 
+  th:not(footer th) {
     color: #000000;
     font-weight: 500;
   }
   
-  /* Ensure buttons respect their text color classes */
+  /* Ensure buttons with text-white class have white text */
   button.text-white,
-  button[class*="text-white"],
+  button[class*="text-white"] {
+    color: #ffffff !important;
+  }
+  
   button.text-white *,
   button[class*="text-white"] * {
     color: #ffffff !important;
